# coffeestock

./: .gitignore  configure.ac
src/: .gitignore  Makefile.am  actions.c  actions.h  bootstrap  buy.c  cli.c  cli.h  coffee.c  config.h.in  configure.ac  history.c  inventory.c  main.c  main2.c  parse.c  parse.h  sell.c  state.c  stock.c  stock.h
src/lcoffee/: Makefile.am  enums.c  enums.h  stock.c  stock.h  store.c  store.h  tools.c  tools.h
tests/: .gitignore  Makefile.am  check_stock.c
